WIP FEATURE: Add Frist Content

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,10 @@
 
 
 ::selection {
-	background-color: theme('colors.orange');;
+	background-color: theme('colors.orange');
 	color: #fff;
 }
-
+ a {
+	color: theme('colors.orange');
+ }
 
